[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ergate"
version = "0.0.0a0"
requires-python = ">=3.8"
description = "An unopinionated worker library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "prryplatypus" }]
dependencies = [
    "pydantic"
]
